# duck-duck-go-ai-rs

./: Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  src-files.js
duck-duck-go-ai/: Cargo.toml
duck-duck-go-ai-py/: Cargo.toml  pyproject.toml
duck-duck-go-ai-py/src/: lib.rs
duck-duck-go-ai/src/: client.rs  lib.rs  model.rs
duck_duck_go_ai/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Client.html
duck_duck_go_ai/client/: struct.Client.html
duck_duck_go_ai/model/: index.html  sidebar-items.js  struct.ChatMessage.html  struct.ChatRequest.html  struct.ChatResponseMessage.html  struct.ChatResponseStream.html
duck_duck_go_ai_py/: all.html  index.html  struct.ChatResponseStream.html
search.desc/duck_duck_go_ai/: duck_duck_go_ai-desc-0-.js
search.desc/duck_duck_go_ai_py/: duck_duck_go_ai_py-desc-0-.js
src/duck_duck_go_ai/: client.rs.html  lib.rs.html  model.rs.html
src/duck_duck_go_ai_py/: lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/futures_core/stream/: trait.Stream.js
trait.impl/pyo3/conversion/: trait.IntoPy.js
trait.impl/pyo3/impl_/extract_argument/: trait.PyFunctionArgument.js
trait.impl/pyo3/impl_/pyclass/: trait.PyClassImpl.js  trait.PyMethods.js
trait.impl/pyo3/pyclass/: trait.PyClass.js
trait.impl/pyo3/type_object/: trait.PyTypeInfo.js
trait.impl/pyo3/types/: trait.DerefToPyAny.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
