[package]
name = "duck-duck-go-ai-py"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "duck_duck_go_ai_py"
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.93"
duck-duck-go-ai = { version = "0.0.0", path = "../duck-duck-go-ai" }
once_cell = "1.20.2"
pyo3 = { version = "0.22.6", features = [ "abi3", "anyhow", "extension-module", "abi3-py37" ] }
tokio = { version = "1.41.1", features = [ "rt-multi-thread" ] }
tokio-stream = "0.1.16"
