[package]
name = "duck-duck-go-ai"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
futures-util = { version = "0.3.31", default-features = false }
nd-tokio-sse-codec = { git = "https://github.com/nathaniel-daniel/nd-tokio-sse-codec-rs", version = "0.0.0" }
reqwest = { version = "0.12.9", features = [ "http2", "json", "stream" ], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.1"
tokio = "1.41.1"
tokio-stream = { version = "0.1.16", default-features = false }
tokio-util = { version = "0.7.12", default-features = false }

[features]
default = [
    "rustls-tls"
]
native-tls = [
    "reqwest/native-tls",
]
rustls-tls = [
    "reqwest/rustls-tls",
]

[dev-dependencies]
tokio = { version = "1.41.1", features = ["macros"] }
